--- a/Changes
+++ b/Changes
@@ -1,3 +1,4 @@
-0.01    2015-11-05 (PERLANCAR)  Released-By: unreleased
+0.01    2015-11-05  Released-By: PERLANCAR; Released: no
 
         - First release.
+
